--- a/css/media.css
+++ b/css/media.css
@@ -2,10 +2,14 @@
 }
 
 @media (min-width: 600px) {
+  .container {
+    max-width: 600px;
+    padding-top: 10em;
+  }
+
   nav {
     display: block;
     position: static;
-    float: right;
   }
 
   header label {
@@ -18,7 +22,23 @@
 }
 
 @media (min-width: 800px) {
+  .container {
+    max-width: 800px;
+    padding-top: 10em;
+  }
+
+  .news-text {
+    font-size: 1em;
+  }
 }
 
 @media (min-width: 1184px) {
+  .container {
+    max-width: 1184px;
+    padding-top: 12em;
+  }
+
+  p {
+    font-size: 1.7em;
+  }
 }
