--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@ body {
 }
 
 .container {
-  padding-top: 3em;
+  padding-top: 9em;
+  padding-bottom: 5em;
+  margin: auto;
 }
 
 header,
@@ -97,3 +99,119 @@ img {
 }
 
 /* Index */
+
+.top-content_home {
+  display: flex;
+  text-align: center;
+}
+
+.top-image_home img {
+}
+
+.top-text_home {
+}
+
+.news h2 {
+  text-align: center;
+  background-color: #4e3e7f;
+  color: #fff;
+  padding: 0.2em;
+  border-radius: 10px;
+}
+
+.news-specific {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: #4e3e7f;
+  padding: 5px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+.news-text {
+  font-size: 0.8em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  color: #fff;
+}
+
+.news-text h3 {
+  margin-top: 5px;
+  margin-bottom: -15px;
+}
+
+.news-image img {
+  border-radius: 10px;
+}
+
+/* Explore */
+
+.top-content_explore {
+}
+
+.explore h2 {
+  background-color: #4e3e7f;
+  color: #fff;
+  text-align: center;
+  padding: 0.2em;
+  border-radius: 10px;
+}
+
+.kids-top h3 {
+  background-color: #4e3e7f;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  width: 10%;
+  padding: 10px;
+  transform: rotate(-10deg);
+  float: left;
+}
+
+.kids {
+  background-color: #4e3e7f;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  color: #fff;
+  padding: 5px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  float: right;
+}
+
+.kids-text {
+  margin: 1em;
+}
+
+.teachers-top h3 {
+  background-color: #4e3e7f;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  width: 10%;
+  padding: 10px;
+  transform: rotate(10deg);
+  float: right;
+}
+
+.teachers {
+  background-color: #4e3e7f;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  color: #fff;
+  padding: 5px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  float: left;
+}
+
+.teachers img {
+  grid-area: 1;
+}
+
+.teachers-text {
+  margin: 1em;
+}
