--- a/css/styles.css
+++ b/css/styles.css
@@ -12,15 +12,16 @@ body {
 }
 
 .container {
-  padding-top: 9em;
-  padding-bottom: 5em;
   margin: auto;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 header,
 footer {
   background-color: #4e3e7f;
   color: #fff;
+  z-index: 9;
 }
 
 header {
@@ -32,7 +33,8 @@ header a {
 }
 
 .header-nav {
-  position: fixed;
+  position: sticky;
+  top: 0;
   width: 100%;
 }
 
@@ -101,14 +103,41 @@ img {
 /* Index */
 
 .top-content_home {
-  display: flex;
+  position: relative;
+  margin: 0;
+}
+
+.top-content_home h1 {
+  background-color: rgba(78, 62, 127, 0.8);
+  color: #fff;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  width: 50%;
+  height: auto;
   text-align: center;
+  padding-top: 4px;
 }
 
-.top-image_home img {
+.top-content_home p {
+  background-color: rgba(78, 62, 127, 0.8);
+  color: #fff;
+  position: absolute;
+  top: 30%;
+  left: 25%;
+  width: 50%;
+  text-align: center;
+  padding-bottom: 30px;
 }
 
-.top-text_home {
+.top-content_home button {
+  background-color: rgba(78, 62, 127, 0.8);
+  color: #fff;
+  position: absolute;
+  top: 55%;
+  left: 45%;
+  width: 10%;
+  text-align: center;
 }
 
 .news h2 {
@@ -148,6 +177,33 @@ img {
 /* Explore */
 
 .top-content_explore {
+  position: relative;
+  margin: 0;
+}
+
+.top-content_explore-text {
+  display: flex;
+  background-color: rgba(78, 62, 127, 0.8);
+  color: #fff;
+  position: absolute;
+  text-align: center;
+  bottom: 4px;
+  right: 0;
+  width: 40%;
+  height: auto;
+  flex-direction: column;
+  padding: 5px;
+}
+
+.top-content_explore-text h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.top-content_explore-text p {
+  text-align: left;
+  margin-top: 5px;
+  margin-bottom: 0;
 }
 
 .explore h2 {
@@ -214,4 +270,38 @@ img {
 
 .teachers-text {
   margin: 1em;
+}
+
+/* Exhibitions */
+
+.top-content_exhibitions h1 {
+  text-align: center;
+  background-color: #4e3e7f;
+  color: #fff;
+  padding: 5px;
+  margin-bottom: 0;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.exhibition-image-text {
+  position: relative;
+  margin: 0;
+}
+
+.exhibition-image-text h2 {
+  background-color: rgba(78, 62, 127, 0.8);
+  color: #fff;
+  position: absolute;
+  bottom: -16px;
+  width: 100%;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.exhibition-list h2 {
+  text-align: center;
+  background-color: #4e3e7f;
+  color: #fff;
 }
