--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,14 @@ header a {
   display: flex;
 }
 
+.header-logo {
+  width: 15%;
+  height: auto;
+}
+
 .header-name {
-  font-size: 40px;
+  left: 200px;
+  font-size: 2em;
   line-height: 1px;
   padding-left: 5px;
 }
@@ -167,7 +173,6 @@ img {
 
 .news-text h3 {
   margin-top: 5px;
-  margin-bottom: -15px;
 }
 
 .news-image img {
@@ -304,4 +309,50 @@ img {
   text-align: center;
   background-color: #4e3e7f;
   color: #fff;
+}
+
+/* Visit */
+
+.top-content_visit {
+}
+
+.visit h2 {
+  background-color: #4e3e7f;
+  color: #fff;
+  text-align: center;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.visit-content {
+  background-color: #4e3e7f;
+  padding: 10px;
+  color: #fff;
+  border-radius: 10px;
+}
+
+.hours-text_image {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+  align-items: center;
+}
+
+/* Get Involved */
+
+.top-content_get-involved {
+  position: relative;
+  margin: 0;
+}
+
+.get-involved_text h1 {
+  background-color: rgba(78, 62, 127, 0.8);
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  bottom: -23px;
+  left: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
