--- a/css/media.css
+++ b/css/media.css
@@ -5,9 +5,96 @@
   .container {
     max-width: 600px;
   }
+
+  .top-content_home-text {
+    top: 25%;
+    left: 12%;
+    width: 75%;
+    padding-bottom: 40px;
+    border-radius: 10px;
+  }
+
+  .top-content_home-text button {
+    top: 75%;
+    left: 35%;
+    width: 30%;
+    border-radius: 10px;
+  }
+
+  .news-specific {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .top-content_explore-text {
+    display: flex;
+    background-color: rgba(78, 62, 127, 0.8);
+    color: #fff;
+    position: absolute;
+    text-align: center;
+    bottom: 4px;
+    right: 0;
+    width: 48%;
+    height: auto;
+    flex-direction: column;
+    padding: 5px;
+  }
+
+  .top-content_explore-text h1,
+  .top-content_explore-text p {
+    background-color: transparent;
+    margin: 0;
+    padding: 0;
+  }
+
+  .kids-top h3 {
+    width: 15%;
+    padding: 10px;
+  }
+
+  .kids {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .kids-text p {
+    margin: 10px 25px 10px 25px;
+  }
+
+  .teachers-top h3 {
+    width: 20%;
+    padding: 10px;
+  }
+
+  .teachers {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .teachers-text p {
+    margin: 10px 25px 10px 25px;
+  }
+
+  .hours-text_image {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media (min-width: 800px) {
+  h1 {
+    font-size: 2em;
+  }
+
+  h2 {
+    font-size: 1.8em;
+  }
+
+  h3 {
+    font-size: 1.6em;
+  }
+
+  p {
+    font-size: 1.5em;
+  }
+
   nav {
     display: block;
   }
@@ -38,8 +125,16 @@
     max-width: 800px;
   }
 
-  .news-text {
-    font-size: 1em;
+  .top-content_explore-text {
+    width: 45%;
+  }
+
+  .exhibition-image-text h2 {
+    bottom: -20px;
+  }
+
+  .get-involved_text h1 {
+    bottom: -23px;
   }
 }
 
@@ -48,19 +143,30 @@
     max-width: 1184px;
   }
 
-  h1 {
-    font-size: 2em;
+  .top-content_home-text {
+    top: 40%;
+    left: 25%;
+    width: 50%;
+    padding-bottom: 40px;
+    border-radius: 10px;
   }
 
-  h2 {
-    font-size: 1.8em;
+  .top-content_home-text button {
+    top: 80%;
+    left: 40%;
+    width: 20%;
+    border-radius: 10px;
   }
 
-  h3 {
-    font-size: 1.6em;
+  .top-content_explore-text {
+    width: 40%;
   }
 
-  p {
-    font-size: 1.5em;
+  .kids {
+    line-height: 35px;
+  }
+
+  .teachers {
+    line-height: 35px;
   }
 }
