--- a/css/media.css
+++ b/css/media.css
@@ -6,6 +6,23 @@
     max-width: 600px;
   }
 
+  .header-logo {
+    max-width: 91px;
+  }
+
+  .header-name {
+    font-size: 2em;
+  }
+
+  nav {
+    top: 90px;
+  }
+
+  .burger-menu {
+    right: 50px;
+    top: 50px;
+  }
+
   .top-content_home-text {
     top: 25%;
     left: 12%;
@@ -97,11 +114,17 @@
 
   nav {
     display: block;
+    top: 100px;
   }
 
   .nav-list {
     position: fixed;
     right: 0;
+    font-size: 1.3em;
+  }
+
+  nav li {
+    display: inline-block;
   }
 
   header label {
