--- a/css/styles.css
+++ b/css/styles.css
@@ -59,13 +59,13 @@ header a {
 }
 
 .header-logo {
-  width: 15%;
-  height: auto;
+  max-width: 56px;
+  max-height: 60px;
 }
 
 .header-name {
   left: 200px;
-  font-size: 2em;
+  font-size: 1.2em;
   line-height: 1px;
   padding-left: 5px;
 }
@@ -74,8 +74,9 @@ nav {
   display: none;
   position: absolute;
   text-align: center;
-  top: 78px;
-  border-radius: 5px;
+  top: 50px;
+  right: 0;
+  border-radius: 10px;
 }
 
 nav ul {
@@ -83,8 +84,8 @@ nav ul {
 }
 
 nav li {
-  display: inline-block;
-  padding: 25px;
+  display: block;
+  padding: 20px;
 }
 
 #hamburger-menu {
@@ -94,6 +95,12 @@ nav li {
 #hamburger-menu:checked ~ nav {
   display: block;
   background-color: #4e3e7f;
+}
+
+.burger-menu {
+  position: fixed;
+  right: 50px;
+  top: 25px;
 }
 
 main {
@@ -106,16 +113,19 @@ footer {
 }
 
 .footer_hours-location {
+  line-height: 20px;
 }
 
-.footer_hours-top {
-}
-
-.footer_hours-bottom {
-}
-
-.footer_opening {
+.footer_bold {
   font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+}
+
+.active {
+  text-decoration: underline;
 }
 
 img {
