--- a/css/styles.css
+++ b/css/styles.css
@@ -310,14 +310,36 @@ img {
   border-top-right-radius: 10px;
 }
 
+.exhibition-image-text_top {
+  position: relative;
+  margin: 0;
+}
+
+.exhibition-image-text_top img {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.exhibition-image-text_top h2 {
+  background-color: rgba(78, 62, 127, 0.8);
+  color: #fff;
+  position: absolute;
+  bottom: -12px;
+  width: 100%;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
 .exhibition-image-text {
   position: relative;
   margin: 0;
 }
 
 .exhibition-image-text img {
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-radius: 10px;
 }
 
 .exhibition-image-text h2 {
